<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">SimpleCalculator</string>
    
    <string name="clear">C</string>
	<string name="negative">\u00B1</string>
	<string name="squareroot">\u221a</string>
	<string name="divide">\u00F7</string>
    <string name="multiply">*</string>    
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="equals">=</string>
    <string name="decimal">.</string>
    
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
	<string name="four">4</string>
	<string name="five">5</string>
	<string name="six">6</string>
	<string name="seven">7</string>
	<string name="eight">8</string>
	<string name="nine">9</string>

</resources>